# almacenes_si

./: .gitignore  0_eda.ipynb  1_etl.ipynb  1_etl_delete.ipynb  2_model.ipynb  2_model_test.ipynb  3_model_prd.ipynb  3_predict.ipynb  4_test_regressors.ipynb  5_analysis_report.ipynb  Model.py  Model_web.py  almacenes_si_db.py  almacenes_si_rds.ipynb  config.yaml  delete.ipynb  example.py  llaves_more_then_q95.py  main.py  pyproject.toml  requirements.txt  test.ipynb  utils.py  utils_web.py
.streamlit/: config.toml
archivos_insumo/: archivo_insumo_2023.csv  archivo_insumo_dummy_campañas_2024.csv  incremento_precios_familia.csv
data/: almacenes_si_curated_by_week.parquet  final_prediction_2023_with_test_data.xlsx  llaves_new_training_just_2022.xlsx  proporcion_error_porcentual.xlsx  rmse_por_llave_resultados.xlsx
datasets/: almacenes_si_curated_by_week.parquet  b_eventos.xlsx
demanda_por_tienda/: Almacenes_si_prediccion_demanda_desagregado_por_tienda_2024.csv
predicciones/: Almacenes_si_prediccion_demanda_2024.csv
serialized_models/: 201AA3.json  201AD2.json  201AD7.json  201AG4.json  201AJ7.json  201AK3.json  201AL4.json  201AM2.json  201AM5.json  201AM8.json  201AN4.json  201AO9.json  201AS6.json  201BF5.json  201BI3.json  201BJ2.json  201BU8.json  201CB6.json  201CE1.json  201CH9.json  201CM7.json  201CO2.json  201CO3.json  202AA1.json  202AA2.json  202AC2.json  202AG9.json  202AH1.json  202AO6.json  202AS4.json  202AU2.json  202BF3.json  202BN8.json  202BS8.json  202BU7.json  202BW4.json  202CA9.json  202CC4.json  205.json  206.json  (+9144 more)
